--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,33 +1,33 @@
 body {
-  padding:50px;
-  font:14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#333;
-  font-weight:300;
+    padding:50px;
+    font:14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color:#333;
+    font-weight:300;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 20px;
+    color:#222;
+    margin:0 0 20px;
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+    margin:0 0 20px;
 }
 
 h1, h2, h3 {
-  line-height:1.1;
+    line-height:1.1;
 }
 
 h1 {
-  font-size:28px;
+    font-size:28px;
 }
 
 h2 {
-  color:#393939;
+    color:#393939;
 }
 
 h3, h4, h5, h6 {
-  color:#494949;
+    color:#494949;
 }
 
 a {
@@ -36,11 +36,8 @@ a {
   text-decoration:none;
 }
 
-a small {
-  font-size:11px;
-  color:#39c;
-  margin-top:-0.6em;
-  display:block;
+a : hover {
+  font-weight: bold;
 }
 
 .wrapper {
@@ -109,6 +106,11 @@ header a {
   font-style: bold;
   font-size:16px;
   color:#39c;
+  text-decoration: none;
+}
+
+header a:hover {
+    font-weight: bold;
 }
 
 header li {
@@ -132,6 +134,10 @@ section {
   padding-bottom:50px;
 }
 
+section a:hover {
+    font-weight: bold;
+}
+
 small {
   font-size:11px;
 }
@@ -150,74 +156,29 @@ footer {
   bottom:25px;
 }
 
-@media print, screen and (max-width: 960px) {
-
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-
-  header {
-    padding-right:200px;
-  }
-
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-
-  header a small {
-    display:inline;
-  }
-
-  header ul {
-    float: left;
-    padding-right:50px;
-    margin-top:52px;
-  }
-
+@media print, screen and (max-width: 800px) {
+    div.wrapper {
+        width:auto;
+        margin:0;
+    }
+    header, section, footer {
+        float:none;
+        position:static;
+        width:auto;
+    }
+    header {
+        text-align:center;
+        padding: 0;
+    }
+    header li {
+        display: inline;
+    }
+    section {
+        border:1px solid #e5e5e5;
+        border-width:1px 0;
+        padding:20px 0;
+        margin:0 0 20px;
+    }
 }
 
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-
-  header {
-    padding:0;
-  }
-
-  header ul, header p.view {
-    position:static;
-  }
-
-  pre, code {
-    word-wrap:normal;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
-
-  header ul {
-    display:none;
-  }
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
 }
